@@ -8,6 +8,8 @@ Version 1.4.2 -- CVS
     of just partial date/time based on time of email, and current date.
   - Fixed bug that would cause e-mails dated in the future to be displayed with only
     the time.
+  - Fix SquirrelSpell JS incompatibility with other plugins that use forms like
+    Link Buttons (#774454).
 
 Version 1.4.1 -- 7 July 2003
 ----------------------------
